--- a/docs/source/refs.bib
+++ b/docs/source/refs.bib
@@ -17,6 +17,7 @@
   doi       = {10.2139/ssrn.4280606},
   publisher = {Elsevier {BV}},
 }
+
 @Article{Nelson1987,
   author    = {Charles R. Nelson and Andrew F. Siegel},
   journal   = {The Journal of Business},
@@ -29,6 +30,18 @@
   doi       = {10.1086/296409},
   groups    = {Bonds},
   publisher = {University of Chicago Press},
+}
+
+@Article{Lucia2002,
+  author    = {Julio J. Lucia and Eduardo S. Schwartz},
+  journal   = {Review of Derivatives Research},
+  title     = {Electricity Prices and Power Derivatives: Evidence from the Nordic Power Exchange},
+  year      = {2002},
+  number    = {1},
+  pages     = {5--50},
+  volume    = {5},
+  doi       = {10.1023/a:1013846631785},
+  publisher = {Springer Science and Business Media {LLC}},
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
