--- a/docs/source/notebooks/models/windpower_forecast_model.ipynb
+++ b/docs/source/notebooks/models/windpower_forecast_model.ipynb
@@ -180,17 +180,19 @@
     "plt.plot(x,inv_logit_from_expectation,'.', label='inverse')\n",
     "plt.xlabel('$\\sigma(X_t)$, t='+t)\n",
     "plt.ylabel('wind at T')\n",
+    "plt.title('realized wind efficiency vs. forecast at timepoint t='+t)\n",
     "plt.legend();\n",
     "plt.subplot(1,2,2)\n",
     "plt.plot(x, inv_logit_from_expectation-onshore_wind[timepoint,:],'.')\n",
     "plt.xlabel('$\\sigma(X_t)$, t='+t)\n",
-    "plt.ylabel('$\\sigma(E[X_T])-E[\\sigma(X_T)]$');"
+    "plt.ylabel('$\\sigma(E[X_T])-E[\\sigma(X_T)]$')\n",
+    "plt.title('difference between call price approx. mean and a simple mean approximation');"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5921323a",
+   "id": "a0a97ffd",
    "metadata": {},
    "outputs": [],
    "source": []
