--- a/docs/source/notebooks/models/windpower_forecast_model.ipynb
+++ b/docs/source/notebooks/models/windpower_forecast_model.ipynb
@@ -103,13 +103,42 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 46,
+   "id": "6e7f6ccb",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-05-19T13:18:13.149565Z",
+     "start_time": "2023-05-19T13:18:09.335510Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7986522910880403"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "onshore_wind[-1,:].mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 31,
    "id": "d230040a",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-05-19T05:29:37.484399Z",
      "start_time": "2023-05-19T05:29:37.058954Z"
-    }
+    },
+    "tags": [
+     "nbsphinx-thumbnail"
+    ]
    },
    "outputs": [
     {
@@ -192,7 +221,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a0a97ffd",
+   "id": "e76ebb90",
    "metadata": {},
    "outputs": [],
    "source": []
