--- a/docs/source/notebooks/models/lucia_schwartz.ipynb
+++ b/docs/source/notebooks/models/lucia_schwartz.ipynb
@@ -195,7 +195,11 @@
    "cell_type": "code",
    "execution_count": 102,
    "id": "bb4919c9",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "nbsphinx-thumbnail"
+    ]
+   },
    "outputs": [
     {
      "data": {
@@ -230,6 +234,7 @@
   }
  ],
  "metadata": {
+  "celltoolbar": "Tags",
   "hide_input": false,
   "kernelspec": {
    "display_name": "Python 3 (ipykernel)",
@@ -246,7 +251,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.9.7"
   },
   "toc": {
    "base_numbering": 1,
