--- a/notebooks/models/residual_demand_forward_model.ipynb
+++ b/notebooks/models/residual_demand_forward_model.ipynb
@@ -3,6 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "4fb997f7",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-01-11T06:09:09.155344Z",
@@ -44,6 +45,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b8a4717c",
    "metadata": {},
    "source": [
     "# Models"
@@ -51,6 +53,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a9847337",
    "metadata": {},
    "source": [
     "- $p(t,T)$: Forward-Price zum Zeitpunkt $t$ mit Expiry $T$\n",
@@ -87,6 +90,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
+   "id": "6c251db8",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-01-05T15:13:38.004029Z",
@@ -133,6 +137,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
+   "id": "d87a30b4",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-01-05T13:23:03.454958Z",
@@ -166,6 +171,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
+   "id": "a084c50f",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-01-05T13:44:22.812664Z",
@@ -178,6 +184,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
+   "id": "3ab185bc",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-01-05T13:44:23.431806Z",
@@ -205,6 +212,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "33495c3f",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-01-05T13:44:24.164597Z",
@@ -226,6 +234,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "f7b697fe",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-01-05T07:31:08.205274Z",
@@ -243,6 +252,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "0f9a4fad",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-01-05T07:09:18.874710Z",
@@ -263,6 +273,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "97133aef",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-01-05T15:23:57.155643Z",
@@ -279,6 +290,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "2fdd1d10",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-01-05T15:23:57.383759Z",
@@ -295,6 +307,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "adeb12b3",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-01-05T15:23:58.621086Z",
@@ -338,6 +351,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "346e74e6",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-01-05T06:43:08.575461Z",
@@ -361,6 +375,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "0acb2fa8",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-01-05T06:43:08.576380Z",
@@ -375,6 +390,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "049d2dcf",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-01-05T06:43:08.576840Z",
@@ -391,6 +407,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "8c03f875",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-01-05T06:43:08.577803Z",
@@ -422,6 +439,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "ee9d6c30",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-01-05T06:43:08.578514Z",
@@ -453,6 +471,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "8cf26f94",
    "metadata": {},
    "source": [
     "## MultiRegionWindForecastModel"
@@ -461,6 +480,7 @@
   {
    "cell_type": "code",
    "execution_count": 80,
+   "id": "a7993864",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-01-11T06:40:27.947915Z",
@@ -503,6 +523,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
+   "id": "bbc939a1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -524,6 +545,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
+   "id": "4c41a72d",
    "metadata": {},
    "outputs": [
     {
@@ -544,6 +566,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
+   "id": "b258aede",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-01-09T16:39:27.301790Z",
@@ -573,6 +596,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
+   "id": "ecac6119",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -594,6 +618,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
+   "id": "125c4f86",
    "metadata": {},
    "outputs": [
     {
@@ -633,6 +658,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "955d70ff",
    "metadata": {},
    "source": [
     "# Hedging"
@@ -641,6 +667,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "4cb75e19",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-01-11T10:37:16.358760Z",
@@ -661,6 +688,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "69f3bb74",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-01-11T09:04:04.677392Z",
@@ -718,6 +746,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
+   "id": "dd7533f8",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-01-11T10:39:53.792322Z",
@@ -1171,6 +1200,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
+   "id": "2f2441a9",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-01-11T10:39:58.866142Z",
@@ -1262,6 +1292,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
+   "id": "c5036b41",
    "metadata": {},
    "outputs": [
     {
@@ -1300,6 +1331,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
+   "id": "ccf2b2f5",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-01-11T10:40:59.483980Z",
@@ -1360,6 +1392,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
+   "id": "aacf1cb0",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-01-13T09:14:14.968337Z",
@@ -1424,6 +1457,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "337a829c",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1432,7 +1466,7 @@
  "metadata": {
   "hide_input": false,
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1446,7 +1480,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.7"
   },
   "toc": {
    "base_numbering": 1,
