--- a/docs/source/notebooks/pricing/green_ppa_expected_value.ipynb
+++ b/docs/source/notebooks/pricing/green_ppa_expected_value.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "id": "c2d0f955",
    "metadata": {
     "ExecuteTime": {
@@ -19,6 +19,14 @@
     }
    },
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\doeltz\\development\\RiVaPy\\docs\\source\\notebooks\\pricing\\../../../..\\rivapy\\__init__.py:11: UserWarning: The pyvacon module is not available. You may not use all functionality without this module. Consider installing pyvacon.\n",
+      "  warnings.warn('The pyvacon module is not available. You may not use all functionality without this module. Consider installing pyvacon.')\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -30,14 +38,6 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
     }
    ],
    "source": [
@@ -48,6 +48,12 @@
     "import numpy as np\n",
     "import json\n",
     "import matplotlib.pyplot as plt\n",
+    "import logging\n",
+    "#logging.basicConfig(level=logging.DEBUG, \n",
+    "#                    format=\"%(asctime)s  - %(levelname)s - %(filename)s:%(lineno)s - %(message)s \")\n",
+    "logger = logging.getLogger('rivapy.pricing')\n",
+    "logger.setLevel(logging.DEBUG)\n",
+    "\n",
     "from rivapy.instruments import SimpleSchedule,  GreenPPASpecification\n",
     "#from rivapy.models.residual_demand_fwd_model import WindPowerForecastModel, WindPowerForecastModelParameter, MultiRegionWindForecastModel, LinearDemandForwardModel\n",
     "\n",
@@ -58,6 +64,7 @@
     "import rivapy.sample_data.residual_demand_models as rdm_sample\n",
     "\n",
     "from rivapy.instruments.factory import create\n",
+    "from rivapy.pricing import green_ppa_mean_pricer\n",
     "\n",
     "from IPython.display import display, HTML\n",
     "display(HTML(\"<style>.container { width:80% !important; }</style>\"))\n",
@@ -78,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 2,
    "id": "ca679b34",
    "metadata": {
     "ExecuteTime": {
@@ -89,51 +96,17 @@
    "outputs": [],
    "source": [
     "simple_schedule = SimpleSchedule(dt.datetime(2022,12,1), dt.datetime(2023,12,1,4,0,0), freq='1H')\n",
-    "green_ppa = GreenPPASpecification(simple_schedule, fixed_price = 10.0, max_capacity=10, technology = 'wind', location='')"
+    "green_ppa = GreenPPASpecification(simple_schedule, \n",
+    "                                  fixed_price = 10.0, \n",
+    "                                  max_capacity=10, \n",
+    "                                  technology = 'wind', \n",
+    "                                  udl = 'power',\n",
+    "                                  location='')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
-   "id": "cf368ea6",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-06-14T05:43:24.599348Z",
-     "start_time": "2023-06-14T05:43:21.198785Z"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/doeltz/doeltz/development/RiVaPy/rivapy/tools/datetime_grid.py:24: FutureWarning: Argument `closed` is deprecated in favor of `inclusive`.\n",
-      "  self.dates = pd.date_range(start, end, freq=freq, tz=tz, closed=closed).to_pydatetime()\n"
-     ]
-    }
-   ],
-   "source": [
-    "dg = DateTimeGrid(start=simple_schedule.start, end=simple_schedule.end, freq='1H')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
-   "id": "411dfd23",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-06-14T05:43:49.941188Z",
-     "start_time": "2023-06-14T05:43:49.880180Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "rd_model = rdm_sample.WagnerModel.residual_demand_model()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 4,
    "id": "0315764f",
    "metadata": {
     "ExecuteTime": {
@@ -141,9 +114,121 @@
      "start_time": "2023-06-14T05:54:41.238439Z"
     }
    },
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'rd_model' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[4], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m results \u001b[38;5;241m=\u001b[39m rd_model\u001b[38;5;241m.\u001b[39msimulate(dg, n_sims\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1000\u001b[39m, start_value_wind\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0.5\u001b[39m, \n\u001b[0;32m      2\u001b[0m                             start_value_load\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0.5\u001b[39m, start_value_solar\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0.5\u001b[39m, seed\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m42\u001b[39m)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'rd_model' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "results = rd_model.simulate(dg, n_sims=1000, start_value_wind=0.5, \n",
+    "                            start_value_load=0.5, start_value_solar=0.5, seed=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "d4ed5552",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'rd_model' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[3], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m green_ppa_mean_pricer\u001b[38;5;241m.\u001b[39mprice(dt\u001b[38;5;241m.\u001b[39mdatetime(\u001b[38;5;241m2022\u001b[39m,\u001b[38;5;241m12\u001b[39m,\u001b[38;5;241m1\u001b[39m), green_ppa, rd_model)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'rd_model' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "green_ppa_mean_pricer.price(dt.datetime(2022,12,1), green_ppa, rd_model)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "5e68908d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'q,f'"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "','.join(['q','f'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "2ddfdc57",
+   "metadata": {},
    "outputs": [],
    "source": [
-    "results = rd_model.simulate(dg, n_sims=1000, start_value_wind=0.5, start_value_load=0.5, start_value_solar=0.5, rnd_state=42)"
+    "from enum import Enum\n",
+    "class PricingRequestTypes(Enum):\n",
+    "    PRICE = 'PRICE'\n",
+    "\n",
+    "    \n",
+    "class PricingRequest:\n",
+    "        \n",
+    "    def __init__(self):\n",
+    "        #print(type(self)._validate())\n",
+    "        for k in type(self)._get_choices():\n",
+    "            setattr(self,k,False)\n",
+    "        depp = ', '.join(type(self).get_choices())\n",
+    "        self.__doc__='Container to store the information which results the respective pricer shall compute. \\n Following attributes are provided: '+depp \n",
+    "        \n",
+    "    @classmethod\n",
+    "    def _validate(cls):\n",
+    "        return cls.selections\n",
+    "    \n",
+    "    @classmethod\n",
+    "    def set_request(cls, x):\n",
+    "        cls.selections.append(x)\n",
+    "        \n",
+    "    @classmethod\n",
+    "    def _get_choices(cls):\n",
+    "        return cls.selections\n",
+    "    \n",
+    "class B(PricingRequest):\n",
+    "    selections = ['A','B']\n",
+    "    \n",
+    "class C(PricingRequest):\n",
+    "    selections = ['C','D']\n",
+    "    \n",
+    "b=B()\n",
+    "c = C()\n",
+    "c.set_request('A')\n",
+    "d = B()\n",
+    "c.set_request('B')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "73333901",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from rivapy.pricing.pricing_request import GreenPPAPricingRequest"
    ]
   },
   {
@@ -233,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 11,
    "id": "b755b16a",
    "metadata": {
     "ExecuteTime": {
@@ -245,19 +330,17 @@
     {
      "data": {
       "text/plain": [
-       "{'a', 'b'}"
+       "array([0], dtype=int64)"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "a=set('a')\n",
-    "b=set('b')\n",
-    "a.update(b)\n",
-    "a"
+    "df = dg.df\n",
+    "df[df.dates.isin([dt.datetime(2022,12,1)])].index.values"
    ]
   },
   {
@@ -290,7 +373,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.11.2"
   },
   "toc": {
    "base_numbering": 1,
@@ -305,7 +388,7 @@
     "height": "calc(100% - 180px)",
     "left": "10px",
     "top": "150px",
-    "width": "408.5px"
+    "width": "164.988px"
    },
    "toc_section_display": true,
    "toc_window_display": true
