--- a/notebooks/instruments/green_ppa.ipynb
+++ b/notebooks/instruments/green_ppa.ipynb
@@ -96,7 +96,10 @@
    "outputs": [],
    "source": [
     "ppa = PPASpecification(20.0, simple_schedule, fixed_price = 10.0)\n",
-    "green_ppa = GreenPPASpecification(simple_schedule, fixed_price = 10.0, technology = 'wind_offshore')"
+    "green_ppa = GreenPPASpecification(simple_schedule, \n",
+    "                                  fixed_price = 10.0, \n",
+    "                                  max_capacity = 100.0,\n",
+    "                                  technology = 'wind_offshore')"
    ]
   },
   {
@@ -837,7 +840,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.9.7"
   },
   "toc": {
    "base_numbering": 1,
