--- a/docs/source/notebooks/models/powerprice_wind_model.ipynb
+++ b/docs/source/notebooks/models/powerprice_wind_model.ipynb
@@ -38,7 +38,7 @@
     "from rivapy.tools.datetime_grid import DateTimeGrid\n",
     "\n",
     "from rivapy.models import OrnsteinUhlenbeck\n",
-    "from rivapy.models.residual_demand_fwd_model import WindPowerForecastModel, WindPowerForecastModelParameter, MultiRegionWindForecastModel, LinearDemandForwardModel\n",
+    "from rivapy.models.residual_demand_model import WindPowerForecastModel, WindPowerForecastModelParameter, MultiRegionWindForecastModel, LinearDemandForwardModel\n",
     "\n",
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -288,7 +288,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.9.7"
   },
   "toc": {
    "base_numbering": 1,
