--- a/docs/source/notebooks/models/windpower_forecast_model.ipynb
+++ b/docs/source/notebooks/models/windpower_forecast_model.ipynb
@@ -228,6 +228,7 @@
   }
  ],
  "metadata": {
+  "celltoolbar": "Tags",
   "hide_input": false,
   "kernelspec": {
    "display_name": "Python 3 (ipykernel)",
@@ -244,7 +245,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.10.6"
   },
   "toc": {
    "base_numbering": 1,
