--- a/docs/source/notebooks/instruments/repurchase_agreement.ipynb
+++ b/docs/source/notebooks/instruments/repurchase_agreement.ipynb
@@ -9,7 +9,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -19,10 +18,20 @@
     "\n",
     "From the perspective of the buyer, the transaction described above is called a *reverse repo*. \n",
     "\n",
-    "The following image ([1]) illustrates the basic life cycle of a (reverse) repo transaction.\n",
-    "\n",
-    "![Repo schema](../images/repo_schema.png)\n",
-    "\n",
+    "The following image ([1]) illustrates the basic life cycle of a (reverse) repo transaction."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![Repo schema](../../figs/repo_schema.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## The Repo Market\n",
     "\n",
     "### Economic Functions\n",
@@ -45,7 +54,7 @@
     "### Typical Terms for Repos\n",
     "The market survey in [3] also compared the different maturities for repos between the financial institutions participated in the survey (main survey), automatic repo trading systems (ATS), and tri-party agents (more on that later).\n",
     "\n",
-    "![Repo maturities](../images/repo_maturities.png)\n",
+    "![Repo maturities](../../figs/repo_maturities.png)\n",
     "\n",
     "## Different Types of Collateral\n",
     "The quality of the underlying collateral of a repo is a key parameter for determination of the repo rate in a repo contract. Hence, repos collateralised by HQLAs will have a lower repo rate than repos collateralised by non HQLAs. The most commonly used type of collateral are government bonds, but equities and coporate bonds are also used very frequently.  \n",
@@ -107,9 +116,11 @@
     "## Different Types of Repos\n",
     "### Tri-party Repos\n",
     "Tri-party repos are repos for which collateral selection, payments and deliveries, custody of collateral securities, collateral management and other operations during the life of the transaction are outsourced by the parties to a third-party agent. Such a tr-party agent can be a custodian bank, an international central securities depository or a national central securities depository. In Europe, the principle tri-party agents are Clearstream Bank Luxembourg, Euroclear Bank and JP Morgan. Once a transaction has been agreed directly between the parties (usually by phone or electronic messaging) both parties independently notify the tri-party agent. The agent will automatically select, from the securities account of the seller, sufficient collateral. The tri-party agent manages the regular revaluation of the collateral, variation margining, income payments on the collateral and the substitution of collateral [1,10,15].  \n",
+    "\n",
     "### Open Repos\n",
     "In an open repo (also called on demand or open-ended repo) the transactions is agreed without a ficed maturity date. Thus, the repo can be terminated on any business day by either party, provided they give notice within an agreed period of time. It is common for the repo rate on an open repo rate to be changed up or down (*re-rated*) only at request of one of the parties and only with agreement of the other. Alternatively, the repo rate can be linked to a one-day interest rate index, which means that the repo rate would change automatically. These both approaches can be combined by quoting the repo rate as a floating interest rate plus/minus a spread, which either party can request to change [1,10,16]. Practitioners often use basis points (BP) to refer to interest rates or spreads. The relation of BP and percentage is the following: $1BP=0.01\\%$.\n",
     "Repo interest is accrued dailty without compounding. Accrued interest can be paid by either, paying it on the repurchase date (as usual in repos), on the re-rate date as a discrete interest payment or once a month also as a discrete interest payment.\n",
+    "\n",
     "### Securities Lending\n",
     "Securities lendings and repos have many similarities. In a securities lending transaction one part gives legal title to a security or a basket of securities to another party, in exchange for legal ownership of collateral. The *seller* in a repo is the *lender* in the securities lending and the *buyer* is called *borrower*. The borrower pays a fee to the lender for the usage of the loaned security. The collateral in securities lending can either be cash or other securities. Securities lending against cash look very similar to security driven repos. When the collateral is cash, the lender is obliged to reinvest the cash and rebate an agreed proportion of the reinvestment return back to the borrower. Hence, the the analogon to the repo rate in securities lending is the *rebate rate* [1]. Another way to view this is, that the lender who recevies the cash needs to pay certain interest on that cash, while simulatneously the borrower pays a borrowing fee for the borrowed security. The net value of those two cash flows is the rebate rate. \n",
     "\n",
@@ -135,10 +146,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": []
   }
  ],
