--- a/notebooks/marketdata/equity_volatilities.ipynb
+++ b/notebooks/marketdata/equity_volatilities.ipynb
@@ -136,7 +136,7 @@
    "outputs": [],
    "source": [
     "# load sample equity option quote table\n",
-    "df_quote_table = pd.read_csv('../../marketdata/vol_quotes.csv',index_col=0)\n",
+    "df_quote_table = pd.read_csv('../../sample_data/vol_quotes.csv',index_col=0)\n",
     "df_quote_table"
    ]
   },
